[tool.poetry]
name = "python-sandbox"
version = "0.1.0"
description = ""
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
jupyter = {extras = ["notebook"], version = "^1.0.0"}
matplotlib = "^3.2.1"
numpy = "^1.18.2"
opencv-python = "<4.3"
optuna = "^1.3.0"
pandas = "^1.0.3"
pillow = "^7.1.1"
pytorch-lightning = "^0.7.3"
scikit-image = "^0.16.2"
scikit-learn = "^0.22.2"
torch = "^1.4.0"
torchvision = "^0.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
flake8-import-order = "^0.18.1"
mypy = "^0.770"
parameterized = "^0.7.4"
yapf = "^0.29.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
